--- a/RedBlackForest/RedBlackForest.csproj
+++ b/RedBlackForest/RedBlackForest.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -37,7 +37,6 @@
     <Compile Include="RedBlackTreeV.StaticMethods.cs" />
     <Compile Include="RedBlackTreeVNode.cs" />
     <Compile Include="RedBlackTreeKVNode.cs" />
-    <Compile Include="Tuple.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
