Switched back to using Pair because it is enum type in contrast to Tuple

--- a/RedBlackForest.Tests/RedBlackForest.Tests.csproj
+++ b/RedBlackForest.Tests/RedBlackForest.Tests.csproj
@@ -35,9 +35,6 @@
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Test.cs" />
-  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="packages.config" />
@@ -47,6 +44,9 @@
       <Project>{B64BE780-3FE6-4792-B336-8FBBEA88048E}</Project>
       <Name>RedBlackForest</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="GenericTests.cs" />
   </ItemGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
